--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "firebase-admin": "^10.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0"
   }
 }
