--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-fileupload": "^1.4.0",
     "firebase-admin": "^10.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.7.0"
+    "mongodb": "^4.7.0",
+    "nodemailer": "^6.7.5"
   }
 }
